New version: Aqua v0.6.7

--- a/A/Aqua/Versions.toml
+++ b/A/Aqua/Versions.toml
@@ -1,2 +1,5 @@
+["0.6.7"]
+git-tree-sha1 = "76c782a88d7e685c2d7413da0a2197b649278852"
+
 ["0.8.4"]
 git-tree-sha1 = "497d933e5998358c2626f782c99a8d4b90af2dd0"
