New version: RecursiveArrayTools v2.29.0

--- a/R/RecursiveArrayTools/Versions.toml
+++ b/R/RecursiveArrayTools/Versions.toml
@@ -1,2 +1,5 @@
+["2.29.0"]
+git-tree-sha1 = "23b198c159dc4fd02204683ed5d4ae105aec5053"
+
 ["3.9.0"]
 git-tree-sha1 = "baa011f308e084cd731e4610b4aeb74a5fee16a1"
