--- a/R/RecursiveArrayTools/Compat.toml
+++ b/R/RecursiveArrayTools/Compat.toml
@@ -1,3 +1,16 @@
+[2]
+Adapt = "3"
+ArrayInterfaceCore = "0.1.1-0.1"
+ArrayInterfaceStaticArrays = "0.1"
+ChainRulesCore = ["0.10.7-0.10", "1"]
+DocStringExtensions = "0.8"
+FillArrays = "0.11-0.13"
+GPUArrays = "8"
+RecipesBase = ["0.7-0.8", "1"]
+StaticArrays = ["0.12", "1"]
+ZygoteRules = "0.2"
+julia = "1.6.0-1"
+
 [3]
 Adapt = "3.4.0-4"
 ArrayInterface = "7.6.0-7"
