--- a/R/RecursiveArrayTools/Deps.toml
+++ b/R/RecursiveArrayTools/Deps.toml
@@ -1,13 +1,24 @@
-[3]
+[2]
+ArrayInterfaceCore = "30b0a656-2188-435a-8636-2ec0e6a096e2"
+ArrayInterfaceStaticArrays = "b0d46f97-bff5-4637-a19a-dd75974142cd"
+ChainRulesCore = "d360d2e6-b24c-11e9-a2a3-2a2ae2dbcce4"
+FillArrays = "1a297f60-69ca-5386-bcde-b61e274b549b"
+GPUArrays = "0c68f7d7-f131-5f86-a1c3-88cf8149b2d7"
+StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
+ZygoteRules = "700de1a5-db45-46bc-99cf-38207098b444"
+
+[2-3]
 Adapt = "79e6a3ab-5dfb-504d-930d-738a2a938a0e"
-ArrayInterface = "4fba245c-0d91-5ea0-9b3e-6abc04ee57a9"
 DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
-GPUArraysCore = "46192b85-c4d5-4398-a991-12ede77f4527"
-IteratorInterfaceExtensions = "82899510-4779-5014-852e-03e436cf321d"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 RecipesBase = "3cdcf5f2-1ef4-517c-9805-6587b60abb01"
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+
+[3]
+ArrayInterface = "4fba245c-0d91-5ea0-9b3e-6abc04ee57a9"
+GPUArraysCore = "46192b85-c4d5-4398-a991-12ede77f4527"
+IteratorInterfaceExtensions = "82899510-4779-5014-852e-03e436cf321d"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 StaticArraysCore = "1e83bf80-4336-4d27-bf5d-d5a4f845583c"
-Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 SymbolicIndexingInterface = "2efcf032-c050-4f8e-a9bb-153293bab1f5"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
