--- a/Registry.toml
+++ b/Registry.toml
@@ -4,6 +4,7 @@ repo = "https://github.com/ven-k/OldEntryRegistry"
 description = "MWE for old entries problem"
 
 [packages]
+17419dee-9462-4adc-b50b-c2e7f5d325a1 = { name = "OldEntry", path = "O/OldEntry" }
 4c88cf16-eb10-579e-8560-4a9242c79595 = { name = "Aqua", path = "A/Aqua" }
 731186ca-8d62-57ce-b412-fbd966d074cd = { name = "RecursiveArrayTools", path = "R/RecursiveArrayTools" }
 961ee093-0014-501f-94e3-6117800e7a78 = { name = "ModelingToolkit", path = "M/ModelingToolkit" }
