New version: OldEntry v0.3.0

--- a/O/OldEntry/Versions.toml
+++ b/O/OldEntry/Versions.toml
@@ -1,2 +1,5 @@
+["0.3.0"]
+git-tree-sha1 = "f428cbcd491968676a336664cefed8442a868fa4"
+
 ["0.5.0"]
 git-tree-sha1 = "669cc963bef6bb606e6f6ee729e8eca781b5b251"
