--- a/O/OldEntry/Deps.toml
+++ b/O/OldEntry/Deps.toml
@@ -2,3 +2,6 @@
 Crayons = "a8cc5b0e-0ffa-5ad4-8c14-923d3ee1735f"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
+
+["0-0.3"]
+Aqua = "3c88cf16-eb10-579e-8560-4a9242c79595"
